@@ -2,6 +2,7 @@
 
 	* README: Removed unneeded whitespace and corrected the spelling.
 	* .cvsignore: Ignore object files too.
+	* checkpas_etcpasswd.cpp: Indent more sanely, and comment a bit more.
 
 1998-11-28  Christian Esken  <esken@kde.org>
 
